--- a/wiki/threads/3627.md
+++ b/wiki/threads/3627.md
@@ -2,31 +2,31 @@
 
 
 ---
-<strong><span style="color:#34a7f9;">Bocy</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Bocy</span></span>:</strong>
 
 <p>Hi, could someone please post the .obj Zombies in Spaceland map &#128556; Thanks!</p>
 
 ---
-<strong><span style="color:#34a7f9;">eDeK</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">eDeK</span></span>:</strong>
 
 <p><a href="https://p3dm.ru/xfsearch/for_game/Call+of+Duty%3A+Infinite+Warfare+Zombies/">https://p3dm.ru/xfsearch/for_game/Call+of+Duty%3A+Infinite+Warfare+Zombies/</a></p>
 
 ---
-<strong><span style="color:#34a7f9;">Bocy</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Bocy</span></span>:</strong>
 
 <p><blockquote><a href="https://p3dm.ru/xfsearch/for_game/Call+of+Duty%3A+Infinite+Warfare+Zombies/">https://p3dm.ru/xfsearch/for_game/Call+of+Duty%3A+Infinite+Warfare+Zombies/</a><br /></blockquote><br />Thanks for this :] is very useful, but I need the entire map</p>
 
 ---
-<strong><span style="color:#34a7f9;">kikail</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">kikail</span></span>:</strong>
 
 <p><blockquote>Thanks for this :] is very useful, but I need the entire map<br /></blockquote><br />U can just use Husky of you have the game</p>
 
 ---
-<strong><span style="color:#34a7f9;">Bocy</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Bocy</span></span>:</strong>
 
 <p><blockquote>U can just use Husky of you have the game<br /></blockquote><br />Hi, I know Husky, but unfortunately I don&#39;t own the game on PC but only on PS4 :] Thanks!</p>
 
 ---
-<strong><span style="color:#34a7f9;">Fanatic</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Fanatic</span></span>:</strong>
 
 <p>Pretty late, but here it is if you still need it: <a href="https://mega.nz/file/5wFBFIwJ#s9wEXJ26XoE6ak7HnGkd0_bNALAQ42edh0G1gGZ8EX0">download</a></p>
