--- a/wiki/threads/3831.md
+++ b/wiki/threads/3831.md
@@ -2,10 +2,10 @@
 
 
 ---
-<strong><span style="color:#34a7f9;">Debino</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Debino</span></span>:</strong>
 
 <p>
-This simple zombies template is for the newer people starting in the mod tools.<br />L3AK Mod is needed for this template to work (<a href="https://wiki.modme.co/wiki/black_ops_3/lua_(lui)/Installation.html">L3AKMOD</a>)<br />if there are any issues or bugs please report them ASAP<br />[MEDIA=youtube]dMnuErsUtAw[/MEDIA]<br />
+This simple zombies template is for the newer people starting in the mod tools.<br />L3AK Mod is needed for this template to work (<a href="https://wiki.modme.co/wiki/black_ops_3/lua_(lui)/Installation.html">L3AKMOD</a>)<br />if there are any issues or bugs please report them ASAP<br /><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/dMnuErsUtAw" frameborder="0"></iframe><br />
 -LUA HUD (default factory HUD)<br />-Perk sounds fix<br />-Player voices (voxes) added<br />-Mystery Boxes<br />-Dogs added/ fix (option to disable/ enable dogs)<br />-Changeable PaP Camo<br />-Changeable Starting weapon<br />-Changeable Player health<br />-Changeable Death machine<br />-Changeable Perk limit<br />-Changeable Starting points<br />-Changeable Zombie speed/ Health<br />-Dev commands<br />-Perk shaders<br />-Powerlag fix (no lag when power is turned on)<br />-Bo4 max ammo<br />
 <br />
 10/31/2021 - v1.1 Initial release (happy Halloween)<br />11/2/2021 - v1.2 Added missing scripts (my fault lol)<br />11/5/2021 - v1.3 Replaced Robits shaders with Humphreys<br />
@@ -19,6 +19,6 @@ This simple zombies template is for the newer people starting in the mod tools.<
 </p>
 
 ---
-<strong><span style="color:#34a7f9;">Debino</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Debino</span></span>:</strong>
 
 <p>-Added Blutig and Bubbly perk shader (11/18/2021)</p>
