--- a/wiki/threads/3832.md
+++ b/wiki/threads/3832.md
@@ -2,6 +2,6 @@
 
 
 ---
-<strong><span style="color:#34a7f9;">Markus Darius</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Markus Darius</span></span>:</strong>
 
 <p>So, I downloaded Logical&#39;s Cold War Weapon Pack from devraw site, I think I did everything right when installing it but in game the weapons makes no sounds.<br /><br />I put the script inside my map szc file, the same that I put all the other sounds scripts:<br /><img src="1261"><br /><br />the file seems to be in the right folder, but I don&#39;t think the file path is the problem, cuz I put everything in &quot;t9_weapons&quot; inside &quot;user_aliases&quot; but it didn&#39;t work either.<br /><br /><img src="1262"><br /><br />this is what the file looks like:<br /><br /><img src="1263"><br /><br />and that is the folder where all sounds are located:<br /><br /><img src="1264"><br /><br /><img src="1265"><br /><br /><img src="1266"><br /><br />also, all the audios in 48000hz:<br /><br /><img src="1267"><br /><br />It doesn&#39;t seems to be nothing wrong with the files, or maybe im too dumb to see whats wrong lmao, but <br />I appreciate any help with this, thanks!!!</p>
