--- a/wiki/threads/3844.md
+++ b/wiki/threads/3844.md
@@ -2,11 +2,11 @@
 
 
 ---
-<strong><span style="color:#34a7f9;">blink-420</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">blink-420</span></span>:</strong>
 
 <p>Anyone know how I would go about adding a timer on-screen that counts down?</p>
 
 ---
-<strong><span style="color:#34a7f9;">Sleepy216</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Sleepy216</span></span>:</strong>
 
 <p>I haven&#39;t tried making a count down timer, but I do intend on it because I want to make a &quot;chaos mode&quot; kind of like the one in extinction.<br />I just figured I&#39;d try to tell you where I was going to start on trying to figure out a timer that counts down, since it&#39;s better than nothing haha.<br /><br />You can look at the ugx timed gameplay script for their timer that counts up and use it as a base for a timer to count down.<br />instead of using the function settimerup use settimer, which sets a timer to count down, alter the countdown time, etc.<br /><br />edit. you can also look at the giants teleporter for how the timer is done as well.</p>
