--- a/wiki/threads/3848.md
+++ b/wiki/threads/3848.md
@@ -2,6 +2,6 @@
 
 
 ---
-<strong><span style="color:#34a7f9;">ShadingYT</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">ShadingYT</span></span>:</strong>
 
 <p>[CENTER]How do i use spiki panzer? i did everything its only the radiant part remains[/CENTER]</p>
