--- a/wiki/threads/3722.md
+++ b/wiki/threads/3722.md
@@ -2,16 +2,16 @@
 
 
 ---
-<strong><span style="color:#34a7f9;">VividNo</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">VividNo</span></span>:</strong>
 
 <p>So my cold war 1911&#39;s sound is working perfectly fine<br />But every weapon ive added after that has had no sound example: (ANY WWII GUNS), (ANY COLD WAR GUNS), (ANY BLACK OPS 1 GUNS)<br />Im sure ive done it all right i did the same thing as i did with the 1911 (which works)<br />Ive added the line of text to user_aliases, zm_levelcommon_weapons (in my zm_&quot;mapname&quot;) and my zone folder<br /><br /><br />Any help would be appreciated :)</p>
 
 ---
-<strong><span style="color:#34a7f9;">Markus Darius</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Markus Darius</span></span>:</strong>
 
 <p>Hi, did you solve the problem? Im with the same problem here and I can&#39;t fix it</p>
 
 ---
-<strong><span style="color:#34a7f9;">kikail</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">kikail</span></span>:</strong>
 
 <p>check if the sound file is .wav and if the frequence is 48000Hz in audacity like that for each sound <img src="1259"></p>
