--- a/wiki/threads/3830.md
+++ b/wiki/threads/3830.md
@@ -2,6 +2,6 @@
 
 
 ---
-<strong><span style="color:#34a7f9;">gunrock12</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">gunrock12</span></span>:</strong>
 
 <p>Just asking if someone could please convert these  shadowman .seanim animations into xanim_export for me?<br />i would very grateful as i failed to get blender going and gave up with maya. theres only 4 files i need converted.<br />that is all thank you.</p>
