--- a/wiki/threads/3835.md
+++ b/wiki/threads/3835.md
@@ -2,6 +2,6 @@
 
 
 ---
-<strong><span style="color:#34a7f9;">BetiroVal</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">BetiroVal</span></span>:</strong>
 
 <p>Just some custom perk machines for Timeslip &amp; Blaze Phase (placed into the default Giant Map)<br /><img src="1270"><img src="1271"></p>
