--- a/wiki/threads/3837.md
+++ b/wiki/threads/3837.md
@@ -2,61 +2,61 @@
 
 
 ---
-<strong><span style="color:#CB2D36;">DTZxPorter</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#CB2D36;">DTZxPorter</span></span>:</strong>
 
 <p>Important notice: On 1/1/2022 | The Modme Forums will be closing. The Wiki will remain. Forum-like content will be available on our new Discord: <a href="https://discord.com/invite/Gf2hPWcUFt">https://discord.com/invite/Gf2hPWcUFt</a> Thanks to all who contributed to the legacy forums. Pardon the appearance while we configure everything.</p>
 
 ---
-<strong><span style="color:#34a7f9;">Spiki</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Spiki</span></span>:</strong>
 
 <p>noooooooooooooooooooooooooooooooooooooooo</p>
 
 ---
-<strong><span style="color:#34a7f9;">D-2-K</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">D-2-K</span></span>:</strong>
 
 <p>Its been a good ride will see you all in the discord server (y)</p>
 
 ---
-<strong><span style="color:#34a7f9;">Bruhman</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Bruhman</span></span>:</strong>
 
 <p><blockquote>noooooooooooooooooooooooooooooooooooooooo<br /></blockquote><br />that seems very genuine spiki LMAO maybe this means a decrease in over used assets in box maps???</p>
 
 ---
-<strong><span style="color:#34a7f9;">Harry Bo21</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong>
 
 <p><blockquote>that seems very genuine spiki LMAO maybe this means a decrease in over used assets in box maps???<br /></blockquote><br />What assets</p>
 
 ---
-<strong><span style="color:#34a7f9;">Spiki</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Spiki</span></span>:</strong>
 
 <p><blockquote>that seems very genuine spiki LMAO maybe this means a decrease in over used assets in box maps???<br /></blockquote><br />Don’t worry. Imma reopen t7mods.com whenever kyle gets around to it</p>
 
 ---
-<strong><span style="color:#34a7f9;">Harry Bo21</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong>
 
 <p><blockquote>Don’t worry. Imma reopen t7mods.com whenever kyle gets around to it<br /></blockquote><br />Lmao do not hold your breathe you could literally die waiting for him to do anything no matter how small</p>
 
 ---
-<strong><span style="color:#34a7f9;">Spiki</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Spiki</span></span>:</strong>
 
 <p><blockquote>Lmao do not hold your breathe you could literally die waiting for him to do anything no matter how small<br /></blockquote><br />Ya some of us have things to do during the day and sometimes night</p>
 
 ---
-<strong><span style="color:#34a7f9;">Bruhman</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Bruhman</span></span>:</strong>
 
 <p><blockquote>Don’t worry. Imma reopen t7mods.com whenever kyle gets around to it<br /></blockquote><br />t7mods was formatted so nicely.... shame some 30 yr old piece of shit had to ruin it!</p>
 
 ---
-<strong><span style="color:#34a7f9;">Bruhman</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Bruhman</span></span>:</strong>
 
 <p><blockquote>Lmao do not hold your breathe you could literally die waiting for him to do anything no matter how small<br /></blockquote><br /> hey bro appreciate your help on qeliferns staffs. anyways please stfu :D</p>
 
 ---
-<strong><span style="color:#34a7f9;">Spiki</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Spiki</span></span>:</strong>
 
 <p><blockquote>t7mods was formatted so nicely.... shame some 30 yr old piece of shit had to ruin it!<br /></blockquote><br />you dont need to bully the man</p>
 
 ---
-<strong><span style="color:#34a7f9;">Harry Bo21</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong>
 
 <p><blockquote>t7mods was formatted so nicely.... shame some 30 yr old piece of shit had to ruin it!<br /></blockquote><br />Yea his name was Kyle<br /><br />And all the content was mine so thanks for the compliment :)</p>
