--- a/wiki/threads/3839.md
+++ b/wiki/threads/3839.md
@@ -2,31 +2,31 @@
 
 
 ---
-<strong><span style="color:#34a7f9;">easyskanka</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">easyskanka</span></span>:</strong>
 
 <p>was a good run boys, thanks for all the help on here over the years</p>
 
 ---
-<strong><span style="color:#34a7f9;">Spiki</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Spiki</span></span>:</strong>
 
 <p>We’re making a new forum. Don’t worry</p>
 
 ---
-<strong><span style="color:#34a7f9;">Duck</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Duck</span></span>:</strong>
 
 <p><blockquote>We’re making a new forum. Don’t worry<br /></blockquote><br />OOOO what&#39;s it gonna be called so I know where to go?</p>
 
 ---
-<strong><span style="color:#34a7f9;">Spiki</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Spiki</span></span>:</strong>
 
 <p>Probably we&#39;ll reopen t7mods.com but if that falls through for whatever reason it&#39;ll be boatsandhoesbo3modding.com</p>
 
 ---
-<strong><span style="color:#34a7f9;">Harry Bo21</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong>
 
 <p><blockquote>Probably we&#39;ll reopen t7mods.com but if that falls through for whatever reason it&#39;ll be boatsandhoesbo3modding.com<br /></blockquote><br />Perfect as long as you don’t want ppl registering - as he had that turned off literally the entire time on the last one<br /><br />Who needs members or the ability to post eh<br /><br />You’ll have to wait 6 months for him to glitch the shit out of vanguard anyway</p>
 
 ---
-<strong><span style="color:#34a7f9;">Spiki</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Spiki</span></span>:</strong>
 
 <p>can you stop acting like a 4 year old?</p>
