--- a/wiki/threads/3841.md
+++ b/wiki/threads/3841.md
@@ -2,16 +2,16 @@
 
 
 ---
-<strong><span style="color:#34a7f9;">Fanatic</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Fanatic</span></span>:</strong>
 
 <p>Ported an animation of this doorway blowing up, and it looks like it&#39;s fully working in APE, but when I try it in game, it looks as if half of the wooden shards aren&#39;t animated and just appear instantly.<br /><br /><img src="1273"><br /><br /><img src="1274"><br /><br />This is my first time working with animations, so apologies if it&#39;s an easy fix.</p>
 
 ---
-<strong><span style="color:#34a7f9;">eDeK</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">eDeK</span></span>:</strong>
 
-<p>[MEDIA=youtube]XoSGVRUTkA0[/MEDIA]<br /><br />[MEDIA=youtube]c_JN-jJW7tI[/MEDIA]</p>
+<p><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/XoSGVRUTkA0" frameborder="0"></iframe><br /><br /><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/c_JN-jJW7tI" frameborder="0"></iframe></p>
 
 ---
-<strong><span style="color:#34a7f9;">Fanatic</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Fanatic</span></span>:</strong>
 
-<p><blockquote>[MEDIA=youtube]XoSGVRUTkA0[/MEDIA]<br /><br />[MEDIA=youtube]c_JN-jJW7tI[/MEDIA]<br /></blockquote><br />That&#39;s the vid I followed at first, and tried the tag_origin fix and didn&#39;t seem to work.<br /><br />Although, if it fully plays in APE with no issues, would it be a problem with MAYA?</p>
+<p><blockquote><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/XoSGVRUTkA0" frameborder="0"></iframe><br /><br /><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/c_JN-jJW7tI" frameborder="0"></iframe><br /></blockquote><br />That&#39;s the vid I followed at first, and tried the tag_origin fix and didn&#39;t seem to work.<br /><br />Although, if it fully plays in APE with no issues, would it be a problem with MAYA?</p>
