--- a/wiki/threads/3843.md
+++ b/wiki/threads/3843.md
@@ -2,6 +2,6 @@
 
 
 ---
-<strong><span style="color:#34a7f9;">altTino</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">altTino</span></span>:</strong>
 
 <p>Hi, there !<br /><br />The question I&#39;m about to ask must have been thought for a long time by the more knowledgeable among you.<br />But I haven&#39;t really found an answer.<br /><br />Is it possible to convert the original battlefield animations and rigs, to sea-file? Be it the weapons or the other.<br />So far I had to animate some models myself.<br /><br />But is there a possible solution ? Whether it&#39;s through a custom scriped tool or something like this ?<br /><br />Or is the process too long and difficult to be feasible?<br /><br />I understand that the only one who wanted them, Ege115, had to rig and animate them himself<br /><br />Hoping that you could enlighten me</p>
