--- a/wiki/threads/3845.md
+++ b/wiki/threads/3845.md
@@ -2,6 +2,6 @@
 
 
 ---
-<strong><span style="color:#34a7f9;">BobbyLee298</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">BobbyLee298</span></span>:</strong>
 
 <p>so on the early rounds when the zombs walk, by the time they reach the player they tend to die before the player get the chance to kill them.<br /><br />does anyone know how can i extend this cleanup kill zombie thing?</p>
