--- a/wiki/threads/3847.md
+++ b/wiki/threads/3847.md
@@ -2,16 +2,16 @@
 
 
 ---
-<strong><span style="color:#34a7f9;">Fanatic</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Fanatic</span></span>:</strong>
 
 <p>Is it possible to turn a Prefab I made with Brushes into an XModel?</p>
 
 ---
-<strong><span style="color:#34a7f9;">Spiki</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Spiki</span></span>:</strong>
 
 <p><a href="https://github.com/ardivee/Radler/releases/tag/v0.2">https://github.com/ardivee/Radler/releases/tag/v0.2</a></p>
 
 ---
-<strong><span style="color:#34a7f9;">Fanatic</span>:</strong>
+<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Fanatic</span></span>:</strong>
 
 <p><blockquote><a href="https://github.com/ardivee/Radler/releases/tag/v0.2">https://github.com/ardivee/Radler/releases/tag/v0.2</a><br /></blockquote><br />thanks :)</p>
