breadcrumbs + font changes

--- a/wiki/threads/3714.md
+++ b/wiki/threads/3714.md
@@ -1,22 +1,22 @@
 # Improved BO3 Ray Gun (Fixed)
-
+Game Asset Reversing | Releases
 
 ---
-<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Smurphy</span></span>:</strong>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Smurphy</span></span>:</strong>
 
 <p><strong><span style="text-decoration: underline">Thread Change Log</span></strong><br />   v1.1<br />          - Fixed the Ray Gun. It was missing the GDT for the effects and I didn&#39;t realise<br />   v1.0<br />          - Released the Improved BO3 Ray Gun<br /><br /><strong><span style="text-decoration: underline">Improved BO3 Ray Gun</span></strong> - <strong><span style="text-decoration: underline">V1.1</span></strong> - <a href="https://mega.nz/file/3sVDAYiB#8VLmWqFkfoDObcKA2hb94kFr00GOEoOrjircf8XjaAQ"><strong>Download</strong></a><br /><br />    -Added Jump, Fall, Walk and Slide animations (Don&#39;t know why it doesn&#39;t have them already)<br />    -Changed the reticle back to red instead of the ugly white<br />    -Fixed the view model position, being so close to camera<br />    -Fixed the alignment of the aim down sights as Treyarch horribly misaligned it<br />    -Changed the effects back to how they were in preview COD&#39;s, using BO2 as the source as BO3&#39;s Ray Gun effects are awful<br />    -Doubled the damage to compensate for the balance change, with Double Tap II and Alternate Ammo Type&#39;s being added which made the BO3 Ray Gun useless<br /><br /><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/F71341YdXqY" frameborder="0"></iframe><br /><br /><strong><span style="text-decoration: underline">Credits</span><br />Scobalula</strong> - For all his tools like always<br /><strong>M5_Prodigy </strong>- For testing it<br /><strong>Treyarch</strong> - For the good classic Ray Gun and the shit BO3 Ray Gun</p>
 
 ---
-<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">xReaction</span></span>:</strong>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">xReaction</span></span>:</strong>
 
 <p>not the hero we wanted, but the one we needed!</p>
 
 ---
-<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">M5_Prodigy</span></span>:</strong>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">M5_Prodigy</span></span>:</strong>
 
 <p>Gonna get slammed by the classic splash damage</p>
 
 ---
-<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">[ Edicius ]</span></span>:</strong>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">[ Edicius ]</span></span>:</strong>
 
 <p>EPIC!</p>
