--- a/wiki/threads/3831.md
+++ b/wiki/threads/3831.md
@@ -1,8 +1,8 @@
 # Debino's assets
-
+Game Asset Reversing | Releases
 
 ---
-<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Debino</span></span>:</strong>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Debino</span></span>:</strong>
 
 <p>
 This simple zombies template is for the newer people starting in the mod tools.<br />L3AK Mod is needed for this template to work (<a href="https://wiki.modme.co/wiki/black_ops_3/lua_(lui)/Installation.html">L3AKMOD</a>)<br />if there are any issues or bugs please report them ASAP<br /><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/dMnuErsUtAw" frameborder="0"></iframe><br />
@@ -19,6 +19,6 @@ This simple zombies template is for the newer people starting in the mod tools.<
 </p>
 
 ---
-<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Debino</span></span>:</strong>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Debino</span></span>:</strong>
 
 <p>-Added Blutig and Bubbly perk shader (11/18/2021)</p>
