--- a/wiki/threads/3834.md
+++ b/wiki/threads/3834.md
@@ -1,17 +1,17 @@
 # Removing NavMesh?
-
+Call of Duty: Black Ops 3 | Radiant
 
 ---
-<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">blink-420</span></span>:</strong>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">blink-420</span></span>:</strong>
 
 <p>So I have a bus that takes players into the starting area of the map, once players are off the bus there is no way back inside. Zombies seem to get confused by the NavMesh still being inside the bus and try to walk through it, how could I go about fixing this issue? I have tried spawning a clip over the bus once its stopped, and have also tried using clip_navmesh_carver as well but neither seem to change the AI behavior. Any help/tips appreciated!</p>
 
 ---
-<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Spiki</span></span>:</strong>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Spiki</span></span>:</strong>
 
 <p>bus or clip DisconnectPaths([detailLevel],[moveAllowed]);<br />after you kick your players off</p>
 
 ---
-<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">blink-420</span></span>:</strong>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">blink-420</span></span>:</strong>
 
 <p><blockquote>bus or clip DisconnectPaths([detailLevel],[moveAllowed]);<br />after you kick your players off<br /></blockquote><br />Works beautifully, thank you for coming in clutch all the time. &lt;3</p>
