--- a/wiki/threads/3709.md
+++ b/wiki/threads/3709.md
@@ -1,22 +1,22 @@
 # Error: tot_faces == triCount ??
-
+Call of Duty: Black Ops 3 | Radiant
 
 ---
-<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">bubba443</span></span>:</strong>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">bubba443</span></span>:</strong>
 
 <p><img src="1160"><br />How does one fix this? Is it from overlapping brushes or is it from too many vertices in my map?</p>
 
 ---
-<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Spiki</span></span>:</strong>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Spiki</span></span>:</strong>
 
 <p>thats what happens when you rip maps with husky XD<br />and ya too many verts</p>
 
 ---
-<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Wakaveli_</span></span>:</strong>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Wakaveli_</span></span>:</strong>
 
 <p><blockquote><img src="1160"><br />How does one fix this? Is it from overlapping brushes or is it from too many vertices in my map?<br /></blockquote><br />How did you end up fixing this? Just too many verts yeah?</p>
 
 ---
-<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">bubba443</span></span>:</strong>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">bubba443</span></span>:</strong>
 
 <p>yup. <br /><blockquote>How did you end up fixing this? Just too many verts yeah?<br /></blockquote></p>
