--- a/wiki/threads/3833.md
+++ b/wiki/threads/3833.md
@@ -1,17 +1,17 @@
 # Problem with the doors in a close space with reflection probe.
-
+Call of Duty: Black Ops 3 | Radiant
 
 ---
-<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">ReQiuYTPL</span></span>:</strong>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">ReQiuYTPL</span></span>:</strong>
 
 <p>Hello! i have a problem with the refleftion proble, the doors don&#39;t stop the light, there&#39;s a lot of light from the door, i tried a lot of things, changing textures, changing the door model, creating a new map, a lot of things, and nothing.<br />I attached a photo, to see how it is.<br />the walls are 16 thickness, i need help xd. Thank for all help!<br />pd: i can&#39;t attach photos i don&#39;t know why.</p>
 
 ---
-<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Brodie3750</span></span>:</strong>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Brodie3750</span></span>:</strong>
 
 <p>Would help if we could see the photo<br />If you can get it attached it might make it easier to help you out</p>
 
 ---
-<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">Spiki</span></span>:</strong>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Spiki</span></span>:</strong>
 
 <p>imma slap you with a &quot;deal with it&quot; although i think on the light you can select &quot;probe only&quot; or something like that. never tried tho</p>
