--- a/wiki/threads/3835.md
+++ b/wiki/threads/3835.md
@@ -1,7 +1,7 @@
 # Timeslip Tonic and Blaze Phase Perk Models
-
+Call of Duty: Black Ops 3 | Models & Animation
 
 ---
-<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">BetiroVal</span></span>:</strong>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">BetiroVal</span></span>:</strong>
 
 <p>Just some custom perk machines for Timeslip &amp; Blaze Phase (placed into the default Giant Map)<br /><img src="1270"><img src="1271"></p>
