--- a/wiki/threads/3848.md
+++ b/wiki/threads/3848.md
@@ -1,7 +1,7 @@
 # panzer shit
-
+Call of Duty: Black Ops 3 | Scripting
 
 ---
-<strong><span style="text-decoration: underline"><span style="color:#34a7f9;">ShadingYT</span></span>:</strong>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">ShadingYT</span></span>:</strong>
 
 <p>[CENTER]How do i use spiki panzer? i did everything its only the radiant part remains[/CENTER]</p>
