start asset xfer

--- a/wiki/threads/3722.md
+++ b/wiki/threads/3722.md
@@ -14,4 +14,4 @@ Game Modding | Call of Duty: Black Ops 3 | Asset Importing
 ---
 <strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">kikail</span></span>:</strong>
 
-<p>check if the sound file is .wav and if the frequence is 48000Hz in audacity like that for each sound <img src="1259"></p>
+<p>check if the sound file is .wav and if the frequence is 48000Hz in audacity like that for each sound <img src="{{ '/wiki/threads/assets/1259.PNG' | relative_url }}"></p>
