--- a/wiki/threads/3849.md
+++ b/wiki/threads/3849.md
@@ -4,7 +4,7 @@ Game Modding | Call of Duty: Black Ops 3 | Radiant
 ---
 <strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">KillRideMasterJ</span></span>:</strong>
 
-<p>Has anyone seen this error before?. i just put in harrys apothicans margwas and panzer. it gives me this error.<br /><br />********************************************************************************<br /><br />UNRECOVERABLE ERROR:<br /><br />^1ERROR: Some textures are the wrong type for creating fx combo texture used in the compute sprite and decal rendering<br /><br /><br />Linker will now terminate.<br /><br />********************************************************************************<br />has anyone seen it before? I&#39;ve peeked through all the materials and can&#39;t find anything out of the ordinary. it was originally <br />right after &#39;c_zom_dlc4_apothicon_fury_dissolve&#39; in the first error in the linker, but in subsequent links it&#39;s just been under the usual weapon <br />camo errors.  <br /><img src="1282"><br />Thanks in advance!</p>
+<p>Has anyone seen this error before?. i just put in harrys apothicans margwas and panzer. it gives me this error.<br /><br />********************************************************************************<br /><br />UNRECOVERABLE ERROR:<br /><br />^1ERROR: Some textures are the wrong type for creating fx combo texture used in the compute sprite and decal rendering<br /><br /><br />Linker will now terminate.<br /><br />********************************************************************************<br />has anyone seen it before? I&#39;ve peeked through all the materials and can&#39;t find anything out of the ordinary. it was originally <br />right after &#39;c_zom_dlc4_apothicon_fury_dissolve&#39; in the first error in the linker, but in subsequent links it&#39;s just been under the usual weapon <br />camo errors.  <br /><img src="{{ '/wiki/threads/assets/1282.png' | relative_url }}"><br />Thanks in advance!</p>
 
 ---
 <strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong>
