--- a/wiki/threads/3835.md
+++ b/wiki/threads/3835.md
@@ -4,4 +4,4 @@ Game Modding | Call of Duty: Black Ops 3 | Models & Animation
 ---
 <strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">BetiroVal</span></span>:</strong>
 
-<p>Just some custom perk machines for Timeslip &amp; Blaze Phase (placed into the default Giant Map)<br /><img src="1270"><img src="1271"></p>
+<p>Just some custom perk machines for Timeslip &amp; Blaze Phase (placed into the default Giant Map)<br /><img src="{{ '/wiki/threads/assets/1270.jpg' | relative_url }}"><img src="{{ '/wiki/threads/assets/1271.jpg' | relative_url }}"></p>
