--- a/wiki/threads/3841.md
+++ b/wiki/threads/3841.md
@@ -4,7 +4,7 @@ Game Modding | Call of Duty: Black Ops 3 | Models & Animation
 ---
 <strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Fanatic</span></span>:</strong>
 
-<p>Ported an animation of this doorway blowing up, and it looks like it&#39;s fully working in APE, but when I try it in game, it looks as if half of the wooden shards aren&#39;t animated and just appear instantly.<br /><br /><img src="1273"><br /><br /><img src="1274"><br /><br />This is my first time working with animations, so apologies if it&#39;s an easy fix.</p>
+<p>Ported an animation of this doorway blowing up, and it looks like it&#39;s fully working in APE, but when I try it in game, it looks as if half of the wooden shards aren&#39;t animated and just appear instantly.<br /><br /><img src="{{ '/wiki/threads/assets/1273.gif' | relative_url }}"><br /><br /><img src="{{ '/wiki/threads/assets/1274.gif' | relative_url }}"><br /><br />This is my first time working with animations, so apologies if it&#39;s an easy fix.</p>
 
 ---
 <strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">eDeK</span></span>:</strong>
