--- a/wiki/threads/3320.md
+++ b/wiki/threads/3320.md
@@ -4,7 +4,7 @@ Game Asset Reversing | Releases
 ---
 <strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Qelifern</span></span>:</strong>
 
-<p><span style="font-size:1.5em;">First of all, this is the first time I&#39;m releasing something this big, it has taken a long time to even get to this point with these staffs.<br />Hopefully everything is included in the download, however if something is missing, point it out in the comments.</span><br /><br />The current state of these Staffs are W.I.P<br />However they are complete with sounds, animations and effects.<br />The only thing missing is the charge up sounds.<br />Also I&#39;ve got no clue how to limit the viewmodel FOV to cover up the poor Treyarch animations.<br /><br />You have full access to all the scripts, ripped from Bo3 with Cerberus (Scobalula) then modified.<br /><br />Here is a Youtube video showing the staves in action.<br /><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/O5ADs6PvpAg" frameborder="0"></iframe><br /><br />Some changes have been made since.<br /><br />A full credits list is included in the download but I want to thank HarryBo21 and Scobalula especially.<br /><br />HarryBo21&#39;s FX Library is required:<br /><a href="https://www.t7mods.com/viewtopic.php?f=4&t=9">https://www.t7mods.com/viewtopic.php?f=4&amp;t=9</a><br /><br />Almost all the scripts come from or originated from Scobalula&#39;s Cerberus so many thanks to you sir.<br /><br /><span style="font-size:1.5em;">Instructions for installation and upgrade steps are also included.</span><br /><br /><br /><img src="{{ '/wiki/threads/assets/792.jpg' | relative_url }}"><img src="{{ '/wiki/threads/assets/793.png' | relative_url }}"><br /><br /><br /><br /><span style="font-size:1.6em;">&quot;Don&#39;t be a jerk&quot;, please if you use this to create content, give credit where credit is due.</span><br /><br /><br /><br /><img src="{{ '/wiki/threads/assets/794.png' | relative_url }}"><img src="{{ '/wiki/threads/assets/795.png' | relative_url }}"><br /><br /><br /><br /><span style="font-size:1.5em;">Staff Code Names</span><br />staff_fire_zm<br />staff_fire_upgraded_zm<br />staff_air_zm<br />staff_air_upgraded_zm<br />staff_lightning_zm<br />staff_lightning_upgraded_zm<br />staff_water_zm<br />staff_water_upgraded_zm<br /><br />Ex. /give staff_fire<br /><br /><br /><span style="font-size:1.5em;">If you run into troubles when installing, make sure you read through all the steps and see if you missed something before commenting.</span><br /><br />------------------------------------------<br /><br />                   <span style="font-size:1.5em;"><a href="https://mega.nz/file/urx0QYhD#CUpJ_bc-r0ovLhYaaZMvrKhkAkbqRPgHklrxilVZAJ0">DOWNLOAD</a>  v1.0.1</span><br /><br />------------------------------------------<br /><br /><span style="font-size:1.5em;"><strong>Credits:</strong></span><br />AllModz<br />AndyWhelen<br />Azsry<br />BluntStuffy<br />Collie<br />DTZxPorter<br />Easyskanka<br />Erthrock<br />Frost Iceforge<br />GerardS0406<br />HarryBo21<br />HitmanVere<br />Hubashuba<br />IperBreach<br />JAMAKINBACONMAN<br />JBird632<br />JiffyNoodles<br />Lilrifa<br />MAKECENTS<br />MZSlayer<br />MadGaz<br />Magicman<br />Mathfag<br />NoobForLunch<br />PCModder<br />ProGamerzFTW<br />ProRevenge<br />Raptroes<br />RedSpace200<br />Scobalula<br />Sethnorris<br />Smasher248<br />StevieWonder87<br />Symbo<br />TheIronicTruth<br />TheSkyeLord<br />TomBMX<br />Treyarch and Activision<br />Will Luffey<br />WillJones1989<br />Yen466<br />Zeroy<br />alexbgt<br />thezombieproject</p>
+<p><span style="font-size:1.5em;">First of all, this is the first time I&#39;m releasing something this big, it has taken a long time to even get to this point with these staffs.<br />Hopefully everything is included in the download, however if something is missing, point it out in the comments.</span><br /><br />The current state of these Staffs are W.I.P<br />However they are complete with sounds, animations and effects.<br />The only thing missing is the charge up sounds.<br />Also I&#39;ve got no clue how to limit the viewmodel FOV to cover up the poor Treyarch animations.<br /><br />You have full access to all the scripts, ripped from Bo3 with Cerberus (Scobalula) then modified.<br /><br />Here is a Youtube video showing the staves in action.<br /><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/O5ADs6PvpAg" frameborder="0"></iframe><br /><br />Some changes have been made since.<br /><br />A full credits list is included in the download but I want to thank HarryBo21 and Scobalula especially.<br /><br />HarryBo21&#39;s FX Library is required:<br /><a href="https://www.t7mods.com/viewtopic.php?f=4&t=9">https://www.t7mods.com/viewtopic.php?f=4&amp;t=9</a><br /><br />Almost all the scripts come from or originated from Scobalula&#39;s Cerberus so many thanks to you sir.<br /><br /><span style="font-size:1.5em;">Instructions for installation and upgrade steps are also included.</span><br /><br /><br /><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/792.jpg' | relative_url }}"><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/793.png' | relative_url }}"><br /><br /><br /><br /><span style="font-size:1.6em;">&quot;Don&#39;t be a jerk&quot;, please if you use this to create content, give credit where credit is due.</span><br /><br /><br /><br /><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/794.png' | relative_url }}"><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/795.png' | relative_url }}"><br /><br /><br /><br /><span style="font-size:1.5em;">Staff Code Names</span><br />staff_fire_zm<br />staff_fire_upgraded_zm<br />staff_air_zm<br />staff_air_upgraded_zm<br />staff_lightning_zm<br />staff_lightning_upgraded_zm<br />staff_water_zm<br />staff_water_upgraded_zm<br /><br />Ex. /give staff_fire<br /><br /><br /><span style="font-size:1.5em;">If you run into troubles when installing, make sure you read through all the steps and see if you missed something before commenting.</span><br /><br />------------------------------------------<br /><br />                   <span style="font-size:1.5em;"><a href="https://mega.nz/file/urx0QYhD#CUpJ_bc-r0ovLhYaaZMvrKhkAkbqRPgHklrxilVZAJ0">DOWNLOAD</a>  v1.0.1</span><br /><br />------------------------------------------<br /><br /><span style="font-size:1.5em;"><strong>Credits:</strong></span><br />AllModz<br />AndyWhelen<br />Azsry<br />BluntStuffy<br />Collie<br />DTZxPorter<br />Easyskanka<br />Erthrock<br />Frost Iceforge<br />GerardS0406<br />HarryBo21<br />HitmanVere<br />Hubashuba<br />IperBreach<br />JAMAKINBACONMAN<br />JBird632<br />JiffyNoodles<br />Lilrifa<br />MAKECENTS<br />MZSlayer<br />MadGaz<br />Magicman<br />Mathfag<br />NoobForLunch<br />PCModder<br />ProGamerzFTW<br />ProRevenge<br />Raptroes<br />RedSpace200<br />Scobalula<br />Sethnorris<br />Smasher248<br />StevieWonder87<br />Symbo<br />TheIronicTruth<br />TheSkyeLord<br />TomBMX<br />Treyarch and Activision<br />Will Luffey<br />WillJones1989<br />Yen466<br />Zeroy<br />alexbgt<br />thezombieproject</p>
 
 ---
 <strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Pepergogo</span></span>:</strong>
