--- a/wiki/threads/3831.md
+++ b/wiki/threads/3831.md
@@ -13,9 +13,9 @@ This simple zombies template is for the newer people starting in the mod tools.<
 <a href="https://mega.nz/file/jEETQKAa#DFKzJ6PXXXUKmFllOI0CQlTvVhZQ1g7y_aoUc2WckCE">DOWNLOAD v1.3</a><br />
 <br /><br /><strong>CREDITS:</strong><br />-Debino -- Making the template (no need to give me credit)<br />-HarryBo21 -- Perk Sounds, Mystery Boxes, Player Vox, etc<br />-Devraw Team -- Dog Prefab, Enable/ Disable Dogs, Pap Camo, Starting Weapon, Powerlag Fix, etc<br />-RudySPG -- Perk Lights<br />-Humphrey -- Perk Shaders<br />-Crazydude55 -- Player Health<br />-Sphynx&#39;s -- Console Commands<br />
 <br />
-<img src="{{ '/wiki/threads/assets/1275.png' | relative_url }}"><br /><a href="https://mega.nz/file/3U0hjaKS#AuQOOe9ntEAWFHjvkzZUWfAX-8AjCVycB99wteI_lQE">Bubbly Download</a><br />
+<img style="max-width: 500px;" src="{{ '/wiki/threads/assets/1275.png' | relative_url }}"><br /><a href="https://mega.nz/file/3U0hjaKS#AuQOOe9ntEAWFHjvkzZUWfAX-8AjCVycB99wteI_lQE">Bubbly Download</a><br />
 <br />
-<img src="{{ '/wiki/threads/assets/1276.png' | relative_url }}"><br /><a href="https://mega.nz/file/XRkWzTSI#OcvEJOR7SWPp9PtOjyD6YXxv9u2X5trOw5_CTe6ZoBo">Blutig Download</a><br />
+<img style="max-width: 500px;" src="{{ '/wiki/threads/assets/1276.png' | relative_url }}"><br /><a href="https://mega.nz/file/XRkWzTSI#OcvEJOR7SWPp9PtOjyD6YXxv9u2X5trOw5_CTe6ZoBo">Blutig Download</a><br />
 </p>
 
 ---
