--- a/wiki/threads/3846.md
+++ b/wiki/threads/3846.md
@@ -4,7 +4,7 @@ Game Modding | Call of Duty: Black Ops 3 | Asset Importing
 ---
 <strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">THAN0S</span></span>:</strong>
 
-<p>When both Madgaz and Logical&#39;s perk packs are combined on a map the Banana Colada perk overlaps the ICU perk from Logical&#39;s pack. I&#39;ve seen both perk packs combined on the &quot;Town of the Tormented&quot; custom map so what&#39;s the secret to fixing this? It&#39;d be helpful for the people looking to combine both packs in their map in the future<br /><br /><img src="{{ '/wiki/threads/assets/1279.png' | relative_url }}"><img src="{{ '/wiki/threads/assets/1280.png' | relative_url }}"></p>
+<p>When both Madgaz and Logical&#39;s perk packs are combined on a map the Banana Colada perk overlaps the ICU perk from Logical&#39;s pack. I&#39;ve seen both perk packs combined on the &quot;Town of the Tormented&quot; custom map so what&#39;s the secret to fixing this? It&#39;d be helpful for the people looking to combine both packs in their map in the future<br /><br /><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/1279.png' | relative_url }}"><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/1280.png' | relative_url }}"></p>
 
 ---
 <strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">D-2-K</span></span>:</strong>
