--- a/wiki/threads/3709.md
+++ b/wiki/threads/3709.md
@@ -4,7 +4,7 @@ Game Modding | Call of Duty: Black Ops 3 | Radiant
 ---
 <strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">bubba443</span></span>:</strong>
 
-<p><img src="{{ '/wiki/threads/assets/1160.png' | relative_url }}"><br />How does one fix this? Is it from overlapping brushes or is it from too many vertices in my map?</p>
+<p><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/1160.png' | relative_url }}"><br />How does one fix this? Is it from overlapping brushes or is it from too many vertices in my map?</p>
 
 ---
 <strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Spiki</span></span>:</strong>
@@ -14,7 +14,7 @@ Game Modding | Call of Duty: Black Ops 3 | Radiant
 ---
 <strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Wakaveli_</span></span>:</strong>
 
-<p><blockquote><img src="{{ '/wiki/threads/assets/1160.png' | relative_url }}"><br />How does one fix this? Is it from overlapping brushes or is it from too many vertices in my map?<br /></blockquote><br />How did you end up fixing this? Just too many verts yeah?</p>
+<p><blockquote><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/1160.png' | relative_url }}"><br />How does one fix this? Is it from overlapping brushes or is it from too many vertices in my map?<br /></blockquote><br />How did you end up fixing this? Just too many verts yeah?</p>
 
 ---
 <strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">bubba443</span></span>:</strong>
